--- a/fragments/their_last_club-drill.org
+++ b/fragments/their_last_club-drill.org
@@ -54,11 +54,232 @@ He eventually righted himself, making a lot of noise as he pushed himself up, sn
 
 Grav continued. "Did you know that in XXX you can have three toenails pulled out for underpaying your take-value? Regardless of circumstances? At least the Crec haven't gone that crazy.
 
-If you find something in the jungle of any value at all, the XXX Forest has a 'claim' on half of it, without any kind of justification. It's just /theirs/ and that's that!"
+If you find something in the jungle of any value at all, the XXX Forest has a 'claim' on half of it, without any kind of justification. It's just /theirs/ and that's that!
 
-with hastily, poorly-appointed row after row of little hills, with a kind of crash pad of a cave.
+How would you take-value half of one Ender's-Stump?"
+
+Gog's cheeks tightened with the suppression of a smile.
+
+"Are we really gonna trek it out <-xxx the whole way through, without a bevy?", asked Gog.
+
+"Why not? So long as we hit xxx Plains by maybe one palm after sundown, we'll be in like flynn <-xxx."
+
+"That's a palm of walking in the dark in xxx woods."
+
+"Eh.", answered Grav.
+
+"Eh.", agreed Gog.
+
+Much later, nearing the end of xxx woods, they encountered a forest-child <-xxx[fn:: make sure naming is consistent and that there has been a footnote already.] whose trek was intersecting with the established trail, as seems always to be the case, and only in the forest; /any/ forest.
+
+"Greetings cheerful fellow traveler!", said Grav, there never having been any sense of fear about them from anyone that he could recall.
+
+Grav knew he would not be able to make anything of the response. Each time, it seemed they had to rebuild the pantomime vocabulary with them from scratch. But they were practiced.
+
+The forest-child <-xxx /was/ a child. It was astonishing. No matter how hard anyone had tried, they couldn't make out any dwarfish features. Other than often being scared and every so often missing fingers, teeth, eyes, or limbs, and but for heaving leathery, tough skin, they were what we moderns would call "toddlers".
+
+They did not speak Crecspeak or anything remotely like it, but were evidently fluent in some kind of language. The small boy[fn:: No one had ever seen a female, and it was always apparent the present company was male in gender.] slouched in a way that a very relaxed, fit, successful older caveman would; a standing slouch that said he could take them or leave them. Or possibly even kill them. But he showed no sense of fear or hatred, just casual toddlerness. They smoked a pipe about half the time. This one was not a partaker[fn:: The ones that smoked, really smoked, and reeked of whatever weed they smoke.].
+
+From appearances, the toddler had not yet considered that the two men might not understand his language. He paused very briefly on occasion in a way that suggested he was baffled by the lack of a response, but continued on just the same.
+
+After an especially baffling non-response, Grav took the initiative to blow away his new friend with casual, pithy, fluently spoken Crec utterances; asking all kinds of questions about who cleaned him after scat time, where was this crazy toddler kingdom located, did he live in a mushroom, and aside from one's thumb, what kind of things were out there to suck on for an active baby like himself.
+
+The light of understanding, forgiveness, and kindness to new friends dawned on the toddler's honest face. He bowed slightly, showing who-knows-what to the woods behind him.
+
+He made a lot of "we friends" gestures with his hands, his heart, and his toothless smile. Grav and Gog mimicked the ones they felt pretty sure about.
+
+Grav turned to Gog. "How is your forest-child-babble?"
+
+Gog said, "More importantly what do we want to ask him. He's full of helpful answers, all written in High Ancient Balrag. What can we get out of him—then maybe see if he jumps for joy at a polished uvula."
+
+Grav looked at the sky through the canopy and thought for a considerable while.
+
+"Ok. Translator, ask him if he would chance the remainder of the xxx woods at a leisurely walk on the way to xxx plains, or would he run like scat?", Grav said to Gog.
+
+"Oh. Thanks for starting with an easy one."
+
+"Don't you think that'd be handy to know?"
+
+"If we were that worried, we'd be running right now."
+
+While the men were talking, the forest-child made a series of gestures. Warning and "no" could be seen on his countenance as he made his interpretive dance.
+
+"Flying?", Gog thought picked up.
+
+"Mouth? Beak?", Grav tried to help, in this elite level version of Pictionary, where the audience more or less mute; and dumb, from the forest-child's perspective.
+
+"Is that a tail? Egg?"
+
+"Lizard bird?", asked Grav.
+
+His feedback from the toddler was a shrug.
+
+"I'm pretty sure he is saying lizard-bird something. Egg...could it be eating for two and therefore especially hungry?"
+
+Lizard-bird could and would kill men. There was no scooping up in the peak and swallowing whole. No, that would be better.
+
+A rare survivor once enthusiastically gave his tale, to the best he could, without embellishment, just for the good of the Forest. He had a kind of speaking tour. /Stay Low to Scrub/ and its rejoinder shouted by his audience, /Stay Low to Mud/ were to catch phrases by which he was known. In other words: Hide, get out of the way [of the stalking lizard-bird]!
+
+He would tour any demographic that would benefit, which would most of all be children. They would gather around him as he stood center stage, or whatever served in its place.
+
+He would scare kids straight about lizard-bird awareness.
+
+#+begin_somethen
+Kids, as you know, my name is Thagalonious Son of Reginald, but you kids know me as Caveman Thag!
+
+And I am so happy to be here. I want to tell you kids about how to be safe, and what to look out for when being lizard-bird-aware!
+#+end_somethen
+
+The kids shout aimlessly but with enthusiasm.
+
+#+begin_quote
+Many of you know some of my story, but I'm going to lay it out right here, like a slain lizard-bird, so you can learn from me. Okaay!?
+#+end_quote
+
+The kids shout again, and Thag points to the ground with his only arm on which there are really only two /sorts/ of fingers.
+
+#+begin_quote
+I say 'Stay Low to Scrub', and /you/ say...
+#+end_quote
+
+"**Stay! Low! to! Mud!**"
+
+Thag smiled.
+
+#+begin_quote
+/Well/... I was walk home from xxx along the path that many of you know well, it's not close to here, but it's close enough. Many of you have seen it in person. It was at Hummingbird Pass, which connects xxx and xxx, down at the far south of our Forest.
+
+We have Balrag for neighbors, so we know a lot about getting along and also about surviving. They're good cavepeople.
+#+end_quote
+
+The children did not yet know that they should sneer at this.
+
+#+begin_quote
+I was minding my own business. I was on my third night, about half way through, as I had to go all the way from xxx to xxx to xxxtaskxxx.
+
+It was not especially bright, as there was only a sliver of moon. The stars where bright where they shone, but there were as much cloudy sky as not, lots of burrows of sky for a big, mean bird to stay out of view; say, just until the last momement...
+#+end_quote
+
+The children said little but some seemed to be crawling backward using their arms as they sat on the floor.
+
+#+begin_quote
+I knew that a lizard-bird included this bit of path in its territory. And, remember this, in a woods thick enough to block the sky, a lizard-bird is always scanning the openings. In the case of us silly Crec that make nice, straight paths, a bird might choose to fly along a nice, straight course scanning for snacks. You my little ones, are snacked sized.
+#+end_quote
+
+A quite-one stepped all over the nighbors beihind her, faces, groins, wherever, in order to escape. Her brother, having been priming her with fear for days and knowing how to trigger her manic flight, just exactly.
+
+Most boys laughed. Otherwise there was not much of a ruckus this scare around.
+
+#+begin_quote
+It was known then, and it is known still that these are the most hazardous. As cloud cover can give you a false set of ease, I was quite at ease, and walking in the middle of the path. I would only very rarely think about danger, walk to the side under the canopy, or turn my head in case I'm both very unlucky and lucky.
+#+end_quote
+
+Thag made a practiced, convincing lizard-bird screech[fn:: One absolutely never used by the bird itself while on the hunt, when it was as silent as a massive owl might be.].
+
+As was always the case with large, temperamental crowds of human children, some added to the known scat-zones, crawling away unembarrassed. The loud, stunning screech was a crowd-pleaser, as the scat-er was immediately giggling and dancing soon enough. And children were hopeless in communicating the nuances of this, far from warning their friends in other parts. So this was always a genuine surprise and That loved it.
+
+#+begin_quote
+But I was not usually so careful, so then it came, eventually. I am unable to puzzle together anything, as I was walking in my own little world, at night in the woods; an older all-finger-and boy who could kick some ham, but was no match to a lizard-bird.
+#+end_quote
+
+Thag always had legitimate lament he could tap into at any time to bring the mood of the house back down to "somber". It was actually something that could be "tapped" in kind of the same way a keg of champagne can be: carefully sometimes sometimes disastrously. You got a lot more champagne than you anticipated.
+
+Thag was quite afraid of lizard-bird still.
+
+This time too, Thag had to snap out of it and continue his outreach. In the most productive way possible.
+
+#+begin_quote
+I was tackled from behind by what felt like being stabbed from behind by seven or eight blut but sharp obsidian blades and a massive speeding boulder of warmth, muiscles, and sparse, downy feathers.
+
+He rode me like a hill-sled for probably four man. Talons squeezing as we slid. By the time we stopped. I felt like I had been wrapped in obsidian-vine[fn:: A vine that grows throughout the Crec realm. If carefully removed and uncoiled (which was obviously a dangerous art) from its host trees, which may be many, and then lightly fire-hardened. It could become a kind of barbed wire. But with pinkie-thumb sized, needle-pointed barbs.], with someone wrapping it ever-tighter. You don't know what it feels like to be mercilessly /squeezed/ by something so terrible...
+#+end_quote
+
+Thag trailed off, eyes empty. The children continued to watch until he shook himself and continued.
+
+#+begin_quote
+It was standing on top of me. And it was /heavey/. It was at least a good sized hyena's weight. As I struggled in a way only one in that situation can truly struggle, it would lift me about a palm with its wings, and then /slam/ me against the ground with all of its weight, making the talons as secure as possible in /me/.
+#+end_quote
+
+The speaker paused only briefly this time.
+
+#+begin_quote
+Once it was sure it had a good hold of me, I guess it wanted to make sure I was as dead as possible so I wouldn't be much trouble on the flight home, wherever that was. To this end he pecked me in the head repeatedly. I turned my head so he would be unable to peck the same place twice, if possible, and twisted all around to try and keep the blows from landing as much as possible.
+
+And indeed that's where the first gap in my memory lives, although I'm able to fill it with all kinds of nightmares, and sometimes do. Don't lament small game[fn:: Don't sweat the small stuff. Don't cry over spilled milk.], kids.
+
+When I came too, it was because he was slowing his flight to set me on his perch. It was a scat and bone covered fortress of sorts. It was clear that she[fn:: The male lizard-bird are xxx.] and she alone lived there. It was literally in the clouds so I only had the slightest idea, at least initially, of where I was and what was going on any more than all-finger man away.
+
+I would soon find out. He started eating me at this point.
+#+end_quote
+
+The children's only reaction to this was to stare.
+
+#+begin_quote
+Birds naturally go after the softer parts. And since all of my might was tied up in protecting my eyes[fn:: Thag was missing both and had a retaneu of assistance for all of life's chores.], he had mostly free reign over my groin parts.
+#+end_quote
+
+The children didn't move, especially the boys.
+
+#+begin_quote
+I switched from protecting my eyes to protecting my groin as fast as I was able, but the bird had every possible advantage over me.
+
+He took up /all/ of my parts, and then some, squeezed with his mighty beak and pulled. Of course he had flipped me over at this point and was putting new holes in my front half.
+
+For him it truely was effortless. The shock and horror I was experiencing at the moment was a kind of protection for me. I don't know how the reflect-soul works, but I can recall no pain at all.
+
+I just remember how effortlessly he tore off what to me was the most important part of my body at the time. It was like the meat had been scored deeply in advance. It just came right off and went down his thoat, her making a whole-body bob as he she tossed it down her own throat.
+
+The wet sound of her feeding is something that stays with me. You don't think of what it might sound like. You don't get a chance to find out, unless you are unlucky-lucky[fn:: Crec used this compound to mean, 'Something terrible happened but something miraculous saved me.'] like me.
+
+I could hear important parts of me going down her throat with a gulp.
+
+The parts you see missing here are the parts she took.
+#+end_quote
+
+Thag took some time in reloushing another of his popular theatrics. He raised his one arm and blindly hopped in a circle, one of his thighs being about half as big around as the other. One ham mostly missing, and a dripping mess of leisurely, gravity-fed feces downward from where his anus used to be.
+
+He completed his circle and made a smile, with the lower lip missing, which is a big smile indeed.
+
+Some children giggled. Thag made an oddly raptor-like grabbing motion in the sound's direction as a friendly wave to a perfectly natural reaction from a child.
+
+#+begin_quote
+I had accepted that some time soon, I would fall asleep from all the blood loss and soon after die. It would be peaceful enough an end, I was unable to feel any pain at the time and felt like all this was happening to someone else.
+
+Just then there was a "whoosh" like a cold wave of wind coming down a long, flat slope, along with a slight flash of gray over the whole rocky cliff side. I could tell it was something fast and enormous and of course I was right in guessing that it was another lizard-bird, snake-meal in the middle, wanting to steal a fresh, juicy, living prize away from its tormentor.
+
+I knew it was just making a first pass. This could only improve my situation, but in my hopelessness I wasn't able to feel anything like hope.
+
+That was the only exploritory pass it was to make. In the middle of my hazy awareness on this hazy mountain, I was suddenly flung, like a rock from a sling.
+
+What I think had happened is this fast, competing bird had more or less tackled the one that was in the middle of eating me, causing it to tumble, where it released me on the up swing, mid-tumble.
+
+I feel like I floated in the air for palm. When I finally landed, it was with a gentle "puff" rather than a jarring splat like I had expected, though not expected to notice.
+
+I had landed in a man-deep, ancient bed of xxx moss that had been accumulating on that misty hillside probably for all-finger all-finger all-finger years.
+#+end_quote
+
+The children, knowing a thing or two about cave medicine, gave a tempered cheer, for they knew of the healing properties of xxx moss for just such injuries[fn:: Although Thag's surival was considered a miracle, as in this case, a third or more of the man's body had be eaten and the rest run through with talon repeatedly.].
+
+#+begin_quote
+No one, my self included could make any kind of meaningful guess as to how long I lay there. I of course was not there to count the suns.
+
+I will say that when I finally got back, /before/ the many moons of rest with the tender care of my mother <-xxx, I had been gone for all-finger and seven days. The parts that I can remember probably only add up to a few <-xxx days.
+
+I had to have been there, slowly recovering in that massive bed of moss for at least all-finger days, with no food, water or awareness.
+
+I was just a hopeless husk of a caveman when I was able to, using only gravity <-xxx and a lot of wiggling, start my desent, towards what or who, I had no idea. I was existing as a beetle exists. I was just mindlessly surviving.
+
+At some point I was lucky enough to wiggle my way into a brook that I had heard getting nearer for many palm. I fell face first and imedately begian to slurp. I sulurrped until I was full, and then slurped some more, I would sometimes throw up half, but start drinking right away again just the same, for blood comes from water and I had lost most.
+
+xxx
+#+end_quote
 
 
 
+xxx Someone with a clever name scares kids straight about lizard bird awareness xxx
+
+
+
+xxx 4 later: with hastily, poorly-appointed row after row of little hills, with a kind of crash pad of a cave.
 
 
