--- a/002.org
+++ b/002.org
@@ -450,7 +450,7 @@ Another thing a rock of any kind can tolerate is some gentle nudging with a gree
 
 "I reluctantly agree with you.", said Gog.
 
-Having gently wedge in some green, spongy twigs into the gap and wrapped the whole "egg" with twist-vine, they used yet more twist-vine to lash the stone to a couple of poles to make a kind of litter.
+Having gently wedged in some green, spongy twigs into the gap and wrapped the whole "egg" with twist-vine, they used yet more twist-vine to lash the stone to a couple of poles to make a kind of litter.
 
 They both raised the stone to hip hight slowly, expecting another strange surprise underneath. It turned out to be just more stone and mud, unsurprisingly, as this was not its birth place, so to speak.
 
@@ -468,13 +468,13 @@ They stared some more.
 
 "Uhhm... Yeah. Like, a lot.", said Grav under his breath.
 
-They continued to stand there, smiling looking at the strange scene before them, shaking their heads[fn:: It meant "disbelief" and it involved moving the head, but it's not your head movement gesture. This was like the gentle head bob of an unaware game bird on the lookout for beetles and mates but otherwise without any kind of agenda for the time being. It also meant 'yes', which is a gesture easily picked up by children as these kind of birds were always around settled places, despite their eggs being stolen and getting killed violently at random. 'Yes, yes. All is good for /now/', the birds seemed to always think when not in a panic, which was their only other state.].
+They continued to stand there looking at the strange scene before them, shaking their heads[fn:: It meant "disbelief" and it involved moving the head, but it's not your head movement gesture. This was like the gentle head bob of an unaware game bird on the lookout for beetles and mates but otherwise without any kind of agenda for the time being. It also meant 'yes', which is a gesture easily picked up by children as these kind of birds were always around settled places, despite their eggs being stolen and getting killed violently at random. 'Yes, yes. All is good for /now/', the birds seemed to always think when not in a panic, which was their only other state.].
 
 And for a while after the rocking stopped they took turns making the involuntary, soft, high gurgle of the dumbfounded.
 
 "Now, this creates at least one serious dilemma.", said Gog. Grav watched him as he spoke with a face that said, 'I know, I know'. "This is, as hoped for, the biggest value-stone that we or possibly...probably anyone has ever seen. And yet, it looks like a big, fat boulder-stump."
 
-Grav snorted despite the unreal circumstances. Neither have seen anything remotely like this in either size or character. Character carrying a lot of the weight in this case.
+Grav snorted despite the unreal circumstances. Neither having seen anything remotely like this in either size or character; character carrying a lot of the weight in this case.
 
 "Now see, if we show this..."
 
@@ -492,7 +492,7 @@ It was something that /might/ be benign looking enough to show grandmother, if y
 
 It was a kind of crypto-stick, for it did lack rocks. And was blunt at the "bottom", as though this was exactly what this particular unlikely combination of crystals did: Form a big human penis, and then stop abruptly when the penis part was obviously over with.
 
-Its enclosing "egg" was a sort of geode that was a semi-transparent dark blue crystal with sparkling silver veins running from the void at its center, outward to the edge of the stone as though "radiating" from the middle. Like the penis had kind of starburst of patterns emanating from it that could only be vaguely glimpsed by breaking the stone, which had been done already by Nature. All who saw it decided it needed no more exploratory cracks.
+Its enclosing "egg" was a sort of geode that was a semi-transparent dark blue crystal with sparkling silver veins running from the void at its center, outward to the edge of the stone as though "radiating" from the middle; like the penis had a kind of starburst of patterns emanating from it that could only be vaguely glimpsed by breaking the stone, which had been done already by Nature. All who saw it decided it needed no more exploratory cracks.
 
 Being wet and muddy as described, it fell and stuck halfway into the mud when Grav made the mistake of trying to hold it by its "base" and relying only on his vice-like grip on muddy stone. This could have been seen as a kind of warning to future handlers.
 
@@ -568,11 +568,11 @@ Gog and Grav each picked up the fatter, heavier end, one on each side, softly gr
 
 The men watched Verk shake his head slowly[fn:: Again, more 'bobbed'.] as they wondered which way this was going.
 
-"It's /beautiful/!", Verk paced slowly in a semi-circle as the small crowed, also gazing and cooing, made room for him.
+"It's /beautiful/!" Verk paced slowly in a semi-circle as the small crowed, also gazing and cooing, made room for him.
 
 Verk lifted the smooth, clean, glittering brown crystal from its perfect den and held it up with wonder, letting the soft orange of the late afternoon sun coming from the nearby cave opening reveal all of the object's beautiful, strictly bilateral symmetry with the contrasting powers of well-oriented, bright sun.
 
-"It looks like /something/...", wondered Verk aloud. "It cannot be other than a message. To comprehend what Ender's-Nature-Force[fn:: Roughly, 'fate'.] has revealed to us is of the utmost importance. It is a message to us, to the Crec, straight from Its Mouth[fn:: "God" was a more abstract being to the Crec than ours is to modern people. Referring to their 'god' as 'it' is in no way a kind of sacrilege. It is the pronoun to be used. For, Kug, Great Diviner of Recent Messages said in his youth, 'The Crec God has no rock-stick!'. In other words Ender-of-Questions was genderless and what is more, not thought of as 'caveperson-like' in the least. They would find the idea so humorous that, should you some day be able to inquire about theirs, offering a description of your god's nature in exchange, a revealing conversation would likely not be possible. Ender-Of-Questions /does/ have a mouth, though. These kinds of things changed in a surprisingly short period of time, though. "Recorded" history had barely begun. The mutation rate was rather high in the Crec's religious world. And religion for them was more a continuum than an on/off as it is for us. /Leave Doubt For Nature's Sake!/ was an customary admonishment for the overly-rational.]."
+"It looks like /something/...", wondered Verk aloud. "It cannot be other than a message. To comprehend what Ender's-Nature-Force[fn:: Roughly, 'fate'.] has revealed to us is of the utmost importance. It is a message to us, to the Crec, straight from Its Mouth[fn:: "God" was a more abstract being to the Crec than ours is to modern people. Referring to their 'god' as 'it' is in no way a kind of sacrilege. It is the pronoun to be used. For, Kug, Great Diviner of Recent Messages said in his youth, 'The Crec God has no rock-stick!'. In other words Ender-of-Questions was genderless and what is more, not thought of as 'caveperson-like' in the least. They would find the idea so humorous that, should you some day be able to inquire about theirs, offering a description of your god's nature in exchange, a revealing conversation would likely not be possible. Ender-Of-Questions /does/ have a mouth, however. These kinds of things changed in a surprisingly short period of time, though. "Recorded" history had barely begun. The mutation rate was rather high in the Crec's religious world. And religion for them was more a continuum than an on/off as it is for us. /Leave Doubt For Nature's Sake!/ was an customary admonishment for the overly-rational.]."
 
 "Indeed Grav and I thought the same thing.", offered Gog.
 
@@ -588,7 +588,7 @@ Some of the men, while holding it, managed to quickly have something to say to t
 
 "I have seen weapons much like this!"
 
-Kin, a caveman that the Crec would say is /Married To The Forest/ said, "Are these not gills, Kvred? Could it be a fish? For it has a kind of small mouth. I have seen a kind of dart-fish that has pronounced dorsal muscles producing a thick, vein-like structure along the bottom, here.", at which Kvred looked nonplussed, as if to say 'why are you asking me?'.
+Kin, a caveman that the Crec would say is /Married To The Forest/ said, "Are these not gills, Kvred? Could it be a fish? For it has a kind of small mouth. I have seen a kind of dart-fish that has pronounced ventral muscles producing a thick, vein-like structure along the bottom, here.", at which Kvred looked nonplussed, as if to say 'why are you asking me?'.
 
 This contributor, smiling and not looking at the crystal, ran his fingers "down" the "bottom" of the object; some others noticing his unkempt fingernail as it glided slowly along the crystal's surface to point out this feature.
 
@@ -604,13 +604,13 @@ At all this, the amount of apparent blindness to the obvious may be striking to 
 
 "First, it needs a name.", said Verk. "Kin, I believe you likened it to a weapon."
 
-Kin, knowing that he did, not smiled broadly.
+Kin, knowing that he had not smiled broadly.
 
 "I shall call it, /Ender's-Sword/, for it is mighty and surely will find its use in making the Crec Forest mightier yet!" Verk had his head tilted slightly back. His closed eyelids were twitching as though fighting to remain open.
 
 There was a gently, admiring applause and periodic tugging of noses from the audience.
 
-"As a gift to one of the Elder-Quorum's finer charities, it will of course make its way eventually to the Hard-Guard-Cave, but tonight it goes home with me, so I may talk with The-Ender and try in my humility to divine his message. Made-Boy-Wife-of-Verk[fn:: See Appendix: 'Language and Naming Surrounding Women'.] and I will ensure it encounters no ill treatment."
+"As a gift to one of the Elder-Quorum's finer charities, it will of course make its way eventually to the Hard-Guard-Cave, but tonight it goes home with me, so I may talk with The-Ender and try in my humility to divine its message. Made-Boy-Wife-of-Verk[fn:: See Appendix: 'Language and Naming Surrounding Women'.] and I will ensure it encounters no ill treatment."
 
 "Very good, Father-Brother Verk! Gog and I will package it in the manor in which we did for its movement from the mine. We encountered problems with our first attempt. It seems to have some tricks up its sleeve[fn:: Not having shirt sleeves, the Crec actually use a similar expression that roughly means, 'magic in its garments'.]."
 
